products list and details view

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kapt.incremental.apt=true
+android.databinding.incremental=true
+
+APPID=I9pG8SLhTzFA0ImFkXsEvQfXMYyn0MgDBNg10Aps
+APIKEY=Yvd2eK2LODfwVmkjQVNzFXwd3N0X7oUuwiMI3VDZ
