--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext{
+        version_constraint_layout = "1.1.3"
+        version_glide = "4.8.0"
+        version_couchbase = "2.6.0"
+        version_kotlin = "1.3.61"
+        version_lifecycle = "2.1.0"
+        version_navigation = "2.1.0"
+        version_nav_plugin="2.1.0"
+        version_recyclerview = "1.1.0"
+        version_moshi = "1.9.2"
+        version_retrofit = "2.6.2"
+        version_kotlin_coroutines="1.3.2"
+    }
+
     repositories {
         google()
         jcenter()
@@ -9,7 +22,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_nav_plugin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
