--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {
         version_recyclerview = "1.1.0"
         version_moshi = "1.9.2"
         version_retrofit = "2.6.2"
-        version_kotlin_coroutines="1.3.2"
+        version_coroutines="1.3.2"
+        version_room = "2.2.2"
     }
 
     repositories {
