--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,17 +9,24 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.bizarrecoding.sm4sh"
-        minSdkVersion 22
-        targetSdkVersion 28
+        minSdkVersion 24
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        kotlinOptions {
+            jvmTarget = JavaVersion.VERSION_1_8.toString()
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.incremental":"true"]
+                arguments = ["room.incremental": "true"]
             }
         }
     }
@@ -33,6 +40,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "APPID", '"X-Parse-Application-Id: I9pG8SLhTzFA0ImFkXsEvQfXMYyn0MgDBNg10Aps"'
+            buildConfigField "String", "APIKEY", '"X-Parse-REST-API-Key: Yvd2eK2LODfwVmkjQVNzFXwd3N0X7oUuwiMI3VDZ"'
         }
     }
     dataBinding {
@@ -44,7 +53,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version_kotlin"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //Jetpack
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
@@ -54,9 +63,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
     //Lifecyle & livedata
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle"
-    // Room
-    implementation "androidx.room:room-runtime:2.2.2"
-    kapt "androidx.room:room-compiler:2.2.2"
+    //Room
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
+    implementation "androidx.room:room-ktx:$version_room"
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
@@ -66,14 +76,20 @@ dependencies {
     implementation "com.squareup.moshi:moshi-adapters:$version_moshi"
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    //Preferences
+    implementation "androidx.preference:preference:1.1.0"
 
     //Couchbase Lite
     //implementation "com.couchbase.lite:couchbase-lite-android:$version_couchbase"
 
+    //dependency injection
+    implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.0'
+    implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.0'
+
     //Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    annotationProcessor "com.github.bumptech.glide:compiler:$version_glide"
+    kapt "com.github.bumptech.glide:compiler:$version_glide"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
